fix: update correct chart margins when container size changes

--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -1,7 +1,9 @@
 .react-autoql-chart-container {
   position: relative;
-  height: 100%;
   width: 100%;
+  flex-grow: 1;
+  flex-shrink: 1;
+  overflow: hidden;
 
   svg {
     // set transparent in css but keep background in inline style for exporting to png
