--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -10,6 +10,8 @@
   background-color: inherit;
   font-size: 14px;
   overflow: hidden;
+  max-height: 100%;
+  max-width: 100%;
   color: var(--react-autoql-text-color-primary);
 }
 
