--- a/src/components/SpeechToTextButton/SpeechToTextButton.scss
+++ b/src/components/SpeechToTextButton/SpeechToTextButton.scss
@@ -12,7 +12,7 @@
   overflow: hidden;
 
   background: var(--react-autoql-accent-color);
-  color: white;
+  color: var(--react-autoql-chat-voice-record-button-color);
   border: none;
 
   flex-shrink: 0;
