--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -37,7 +37,7 @@
 .react-autoql-btn.primary {
   background: var(--react-autoql-accent-color);
   border: 1px solid var(--react-autoql-accent-color);
-  color: white;
+  color: var(--react-autoql-text-color-secondary);
   &:hover {
     opacity: 0.8;
   }
