--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -94,7 +94,7 @@
       width: 35px;
       border-radius: 20px;
       background: var(--react-autoql-accent-color, #26a7df);
-      color: white;
+      color:  var(--react-autoql-text-color-secondary);
       line-height: 38px;
       text-align: center;
       font-size: 20px;
