--- a/src/components/QueryTipsTab/QueryTipsTab.scss
+++ b/src/components/QueryTipsTab/QueryTipsTab.scss
@@ -109,7 +109,7 @@
     border-radius: 50%;
     outline: none;
     a {
-      color: #fff;
+      color:  var(--react-autoql-text-color-secondary);
     }
   }
 
