--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -12,6 +12,8 @@
   overflow: hidden;
   max-height: 100%;
   max-width: 100%;
+  width: 100%;
+  height: 100%;
   color: var(--react-autoql-text-color-primary);
 }
 
