--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -33,6 +33,7 @@
 .react-autoql-table.tabulator .tabulator-header .tabulator-col,
 .react-autoql-table.tabulator .tabulator-cell {
   border-color: var(--react-autoql-border-color);
+  background-color: var(--react-autoql-background-color-primary);
 }
 .react-autoql-table.tabulator .tabulator-header {
   border-bottom: 2px solid var(--react-autoql-border-color);
