fix axis selectors

--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -6,8 +6,7 @@ g.legendOrdinal tspan {
   cursor: pointer;
 }
 
-.x-axis-label-border,
-.y-axis-label-border,
+.axis-label-border,
 .legend-title-border {
   cursor: pointer;
   stroke: transparent;
