--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,3 +1,57 @@
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+h4 {
+  display: block;
+  margin-top: 1.33em;
+  margin-bottom: 1.33em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+h5 {
+  display: block;
+  font-size: 0.83em;
+  margin-top: 1.67em;
+  margin-bottom: 1.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+h6 {
+  display: block;
+  font-size: 0.67em;
+  margin-top: 2.33em;
+  margin-bottom: 2.33em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
 body {
   height: 100vh;
   width: 100vw;
@@ -11,15 +65,6 @@ body {
   padding-right: 500px;
   text-align: center;
   height: auto;
-}
-
-.test-page-container h4 {
-  margin-bottom: 5px;
-  margin-top: 15px;
-}
-
-.test-page-container input {
-  min-width: 250px;
 }
 
 .ui-overlay {
@@ -47,22 +92,6 @@ body {
 
 .ant-form-item input {
   max-width: unset;
-}
-
-.chat-voice-record-button {
-  margin: 10px;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 90px;
-  height: 34px;
-  margin-top: 10px;
-}
-
-.switch input {
-  display: none;
 }
 
 #clear-rating-button {
