--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -1,6 +1,5 @@
 .react-autoql-table-container {
-  flex-grow: 1;
-  flex-shrink: 1;
+  flex: 1;
   max-width: 100%;
   width: 100%;
   background-color: inherit;
