feat: add dpr query tab to data messenger

--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -1,7 +1,10 @@
 .chat-single-message-container {
   transition: background-color 0.2s ease;
   padding-top: 6px;
-  max-height: 85%;
+
+  &:not(.no-max-height) {
+    max-height: 85%;
+  }
 
   &:first-of-type {
     margin-top: 10px;
