fix: place data limit tooltip on right if no RT

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -315,6 +315,7 @@
   line-height: 1.5em;
   padding: 7px 15px;
   transition: none;
+  text-align: left;
   opacity: 1 !important;
   z-index: 99999 !important; /* necessary to show up on top of rc drawer */
 }
