--- a/src/components/SpeechToTextButton/SpeechToTextButton.scss
+++ b/src/components/SpeechToTextButton/SpeechToTextButton.scss
@@ -30,6 +30,7 @@
 .react-autoql-tooltip {
   font-family: inherit;
   letter-spacing: 0.04em;
+  text-align: left;
   padding: 7px 15px;
   opacity: 1 !important;
   z-index: 99999 !important;
