--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -30,24 +30,28 @@
     }
   }
 
-  .MuiToggleButton-root {
-    font-size: 11px;
-    height: 24px;
-    color: var(--react-autoql-text-color-primary);
-    border-color: var(--react-autoql-border-color);
+  .include-exclude-toggle-group {
+    height: 23px;
+    font-size: 12px;
+    font-weight: 200;
 
-    &.Mui-selected {
-      &.exclude-btn {
-        color: var(--react-autoql-danger-color);
-        border-color: var(--react-autoql-danger-color);
-      }
-      &.include-btn {
+    .react-autoql-radio-btn.active {
+      background-color: var(--react-autoql-border-color);
+    }
+
+    :first-child.react-autoql-radio-btn {
+      &:hover,
+      &.active {
         color: var(--react-autoql-accent-color);
         border-color: var(--react-autoql-accent-color);
       }
+    }
 
-      &:hover {
-        opacity: 0.7;
+    :nth-child(2).react-autoql-radio-btn {
+      &:hover,
+      &.active {
+        color: var(--react-autoql-danger-color);
+        border-color: var(--react-autoql-danger-color);
       }
     }
   }
