--- a/src/components/Radio/Radio.scss
+++ b/src/components/Radio/Radio.scss
@@ -70,22 +70,23 @@
     transition: all 0.2s ease;
     cursor: pointer;
 
+    &:not(:first-child) {
+      border-left: 1px solid transparent;
+    }
+
     &.active {
       background-color: var(--react-autoql-accent-color, #26a7df);
       border-color: var(--react-autoql-accent-color, #26a7df);
       color: #fff;
-      z-index: 3;
     }
     &.active.outlined {
       background-color: inherit;
       color: var(--react-autoql-accent-color, #26a7df);
-      z-index: 3;
     }
 
     &:hover:not(.active) {
       border-color: var(--react-autoql-accent-color, #26a7df);
       color: var(--react-autoql-accent-color, #26a7df);
-      z-index: 2;
     }
 
     &:first-child {
