feat: add exclude option to filter locks
* feat: add CSV progress callback props to dashboard widget
* fix: update query endpoint to use new filter lock param
* feat: add QueryInput prop clearQueryOnSubmit
* fix spinner style on buttons
* fix: heatmap and bubble chart y axis labels overlapping
* fix: place data limit tooltip on right if no RT
* fix radio group styles
* fix single value response drilldowns
* fix vlautocomplete up down arrow bug
* fix tootlip bugs
* fix spinner color

--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -7,9 +7,11 @@
   opacity: 1;
   min-width: 500px;
   max-width: 70vw;
-  height: 350px;
+  min-height: 350px;
+  max-height: 90vh;
   background: var(--react-autoql-background-color-primary);
   color: var(--react-autoql-text-color-primary);
+  overflow-y: auto !important;
 
   .filter-lock-toast-container {
     top: 0;
@@ -25,6 +27,32 @@
 
     .Toastify__toast-body > div:last-child {
       flex: unset;
+    }
+  }
+
+  .include-exclude-toggle-group {
+    height: 23px;
+    font-size: 12px;
+    font-weight: 200;
+
+    .react-autoql-radio-btn.active {
+      background-color: var(--react-autoql-border-color);
+    }
+
+    :first-child.react-autoql-radio-btn {
+      &:hover,
+      &.active {
+        color: var(--react-autoql-accent-color);
+        border-color: var(--react-autoql-accent-color);
+      }
+    }
+
+    :nth-child(2).react-autoql-radio-btn {
+      &:hover,
+      &.active {
+        color: var(--react-autoql-danger-color);
+        border-color: var(--react-autoql-danger-color);
+      }
     }
   }
 }
@@ -50,12 +78,13 @@
     margin-top: 3px;
     margin-bottom: 5px;
     color: var(--react-autoql-text-color-primary);
+    display: inline-flex;
   }
 
   .react-autoql-condition-list-loading-container,
   .react-autoql-empty-condition-list,
   .react-autoql-filter-list-container {
-    flex: 1;
+    flex: 1 1 245px;
   }
 
   .filter-lock-menu-header {
@@ -86,7 +115,7 @@
   }
 
   .react-autoql-filter-list-container {
-    margin-top: 10px;
+    margin: 10px 0;
 
     .flex {
       width: 100%;
@@ -94,12 +123,12 @@
       flex-direction: row;
       justify-content: space-between;
       flex-wrap: nowrap;
-      white-space: nowrap;
       margin-bottom: 4px;
 
       .persist-toggle-column,
       .react-autoql-condition-table-list-item {
         margin-right: 25px;
+        max-width: 350px;
       }
 
       .react-autoql-remove-filter-icon {
@@ -109,6 +138,16 @@
           color: var(--react-autoql-danger-color);
         }
       }
+    }
+
+    .filter-lock-category-title {
+      padding-right: 10px;
+      padding-top: 1px;
+      max-width: 195px;
+      overflow: hidden;
+    }
+    .persist-toggle-column .react-autoql-icon {
+      margin-left: 3px;
     }
 
     .react-autoql-highlight-row {
