--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -15,6 +15,11 @@
   width: 100%;
   height: 100%;
   color: var(--react-autoql-text-color-primary);
+
+  .query-output-error-message,
+  .no-columns-error-message {
+    margin: auto;
+  }
 }
 
 .react-autoql-response-content-container.table {
