Update "thank you for your feedback" message

--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -21,7 +21,8 @@
   }
 
   .query-output-error-message,
-  .no-columns-error-message {
+  .no-columns-error-message,
+  .feedback-message {
     margin: auto;
   }
 }
