change ajax filter operator to "LIKE"

--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -18,6 +18,9 @@
 .react-autoql-table.tabulator .tabulator-tableHolder .tabulator-table {
   background-color: inherit;
 }
+// .tabulator-loader {
+//   display: none;
+// }
 .react-autoql-table-container.supports-drilldown
   .react-autoql-table.tabulator
   .tabulator-row.tabulator-unselectable:hover {
