--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   background-color: inherit;
   font-size: 14px;
   overflow: hidden;
