--- a/src/components/ExploreQueries/ExploreQueries.scss
+++ b/src/components/ExploreQueries/ExploreQueries.scss
@@ -20,7 +20,6 @@
   }
   .query-tips-result-container {
     color: var(--react-autoql-text-color-primary);
-    padding: 0px 20px;
     text-align: center;
     flex: 1;
 
@@ -32,7 +31,6 @@
     .query-tip-item {
       position: relative;
       padding: 13px;
-      border-top: 1px solid rgba(0, 0, 0, 0.04);
       cursor: pointer;
 
       &:first-child {
@@ -60,10 +58,14 @@
     width: 50px;
     height: 100%;
     font-size: 20px;
+    visibility: hidden;
     color: var(--react-autoql-text-color-placeholder);
     cursor: pointer;
     &:hover {
       color: var(--react-autoql-accent-color);
+    }
+    &.visible {
+      visibility: visible;
     }
   }
   .react-autoql-chatbar-input.left-padding {
