--- a/src/components/OptionsToolbar/OptionsToolbar.scss
+++ b/src/components/OptionsToolbar/OptionsToolbar.scss
@@ -1,5 +1,5 @@
 .autoql-options-toolbar {
-  position: absolute;
+  display: inline-block;
   background: inherit;
   padding: 5px;
   border-radius: 6px;
@@ -14,6 +14,24 @@
   .react-autoql-toolbar-btn {
     color: var(--react-autoql-text-color-primary);
   }
+}
+
+.more-options-menu,
+.report-problem-menu {
+  background: var(--react-autoql-background-color-primary);
+  padding: 10px 0;
+
+  span.react-autoql-icon svg {
+    margin-right: 3px;
+  }
+}
+
+.report-problem-text-area {
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  margin-top: 10px;
+  padding: 5px 10px;
+  outline: none !important;
 }
 
 .copy-sql-modal-content {
