--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -508,6 +508,7 @@
   border-bottom: 1px solid
     var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.4)) !important;
   transition: opacity 0.3s ease;
+  cursor: se-resize;
 }
 
 .react-autoql-dashboard-tile.editing:hover .react-resizable-handle {
