--- a/src/components/ExploreQueries/ExploreQueries.scss
+++ b/src/components/ExploreQueries/ExploreQueries.scss
@@ -1,135 +1,150 @@
 .query-tips-page-container {
   height: 100%;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 
-  .chat-bar-input-icon {
-    top: 20px;
-    left: 26px;
+  h2 {
+    color: var(--react-autoql-text-color-primary);
+  }
+
+  .react-autoql-chatbar-input-container {
+    flex: 0;
+    padding: 10px;
+
+    .react-autoql-chatbar-input {
+      margin: 0;
+      width: 100%;
+    }
+  }
+  .query-tips-result-container {
+    color: var(--react-autoql-text-color-primary);
+    text-align: center;
+    flex: 1;
+
+    .animated-item {
+      animation: fadeIn 0.3s linear;
+      animation-fill-mode: both;
+    }
+
+    .query-tip-item {
+      position: relative;
+      padding: 13px;
+      cursor: pointer;
+
+      &:first-child {
+        border-top: none;
+      }
+
+      &:hover {
+        font-weight: bold;
+        color: var(--react-autoql-accent-color);
+      }
+    }
+
+    .query-tips-result-placeholder {
+      margin-top: 50px;
+    }
+  }
+
+  .chat-bar-clear-btn {
+    position: absolute;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    right: 0;
+    top: 0;
+    width: 50px;
+    height: 100%;
+    font-size: 20px;
+    visibility: hidden;
+    color: var(--react-autoql-text-color-placeholder);
+    cursor: pointer;
+    &:hover {
+      color: var(--react-autoql-accent-color);
+    }
+    &.visible {
+      visibility: visible;
+    }
   }
   .react-autoql-chatbar-input.left-padding {
     padding-left: 46px;
   }
-}
-.query-tips-result-container {
-  color: var(--react-autoql-text-color-primary);
-  padding: 0px 20px;
-  text-align: center;
-  max-width: 550px;
-  margin: 0 auto;
-
-  .query-tip-list-container {
-    margin-bottom: 20px;
-  }
-
-  .animated-item {
-    animation: fadeIn 0.3s linear;
-    animation-fill-mode: both;
-  }
-
-  .query-tip-item {
-    position: relative;
-    padding: 13px;
-    border-top: 1px solid rgba(0, 0, 0, 0.04);
-    cursor: pointer;
-
-    &:first-child {
-      border-top: none;
-    }
-
-    .execute-btn {
-      position: absolute;
-      right: 10px;
-      top: 4px;
-      font-size: 20px;
-      visibility: hidden;
-      opacity: 0;
-    }
-
-    &:hover {
-      font-weight: bold;
-      color: var(--react-autoql-accent-color);
-      .execute-btn {
-        visibility: visible;
-        opacity: 1;
-      }
-    }
-  }
-
-  .query-tips-result-placeholder {
-    margin-top: 50px;
-    opacity: 0.6;
+  .react-autoql-chatbar-input.right-padding {
+    padding-right: 46px;
   }
 }
 
-.chat-bar-loading-spinner {
-  position: absolute;
-  right: 20px;
-  top: 22px;
-}
+// .chat-bar-loading-spinner {
+//   position: absolute;
+//   right: 20px;
+//   top: 22px;
+// }
 
-#react-paginate {
-  position: relative;
-  background: transparent;
-  padding: 8px;
+// #react-paginate {
+//   position: relative;
+//   background: transparent;
+//   padding: 8px;
 
-  ul {
-    display: inline-block;
-    padding-left: 0;
-    margin-bottom: 0;
-  }
+//   ul {
+//     display: inline-block;
+//     padding-left: 0;
+//     margin-bottom: 0;
+//   }
 
-  li {
-    display: inline-block;
-    color: var(--react-autoql-text-color-primary);
-    cursor: pointer;
-    margin-right: 3px;
-    border-radius: 5px;
-    margin-bottom: 0;
-    user-select: none;
-    // border: 1px solid transparent;
+//   li {
+//     display: inline-block;
+//     color: var(--react-autoql-text-color-primary);
+//     cursor: pointer;
+//     margin-right: 3px;
+//     border-radius: 5px;
+//     margin-bottom: 0;
+//     user-select: none;
+//     // border: 1px solid transparent;
 
-    &:hover {
-      opacity: 0.7;
-      // border: 1px solid #fff;
-      border-radius: 50%;
-    }
-  }
+//     &:hover {
+//       opacity: 0.7;
+//       // border: 1px solid #fff;
+//       border-radius: 50%;
+//     }
+//   }
 
-  li a {
-    display: inline-block;
-    color: var(--react-autoql-text-color-primary);
-    outline: none;
-    width: 28px;
-    height: 28px;
-    line-height: 28px;
-  }
+//   li a {
+//     display: inline-block;
+//     color: var(--react-autoql-text-color-primary);
+//     outline: none;
+//     width: 28px;
+//     height: 28px;
+//     line-height: 28px;
+//   }
 
-  li.selected {
-    background: var(--react-autoql-accent-color);
-    border-radius: 50%;
-    outline: none;
-    a {
-      color: var(--react-autoql-accent-text-color);
-    }
-  }
+//   li.selected {
+//     background: var(--react-autoql-accent-color);
+//     border-radius: 50%;
+//     outline: none;
+//     a {
+//       color: var(--react-autoql-accent-text-color);
+//     }
+//   }
 
-  .pagination-next.disabled,
-  .pagination-previous.disabled {
-    opacity: 0.5;
-    pointer-events: none;
-    // &:hover {
-    //   border: 1px solid transparent;
-    // }
-  }
+//   .pagination-next.disabled,
+//   .pagination-previous.disabled {
+//     opacity: 0.5;
+//     pointer-events: none;
+//     // &:hover {
+//     //   border: 1px solid transparent;
+//     // }
+//   }
 
-  .pagination-previous,
-  .pagination-next {
-    font-size: 18px;
-    a {
-      color: var(--react-autoql-text-color-primary);
-    }
-  }
-}
+//   .pagination-previous,
+//   .pagination-next {
+//     font-size: 18px;
+//     a {
+//       color: var(--react-autoql-text-color-primary);
+//     }
+//   }
+// }
 
 // Set delay per List Item, max out at 15 as it shouldnt exceed this
 @for $i from 1 through 15 {
