--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -162,6 +162,10 @@
     color: var(--react-autoql-text-color-primary);
     opacity: 0.8;
   }
+
+  .react-autoql-toolbar-btn.active {
+    color: var(--react-autoql-accent-color);
+  }
 }
 
 /* Safetynet styles specific to dashboard tiles */
@@ -214,7 +218,7 @@
   flex-grow: 0;
 
   .dashboard-tile-title {
-    color: var(--react-autoql-accent-color, #26a7df);
+    color: var(--react-autoql-dashboard-title-color);
   }
 }
 
